# desafio-dev-junior

./: executar.md  manage.py  pyproject.toml
desafio_dev_junior/: asgi.py  settings.py  urls.py  wsgi.py
desafio_dev_junior/contratos/: admin.py  models.py
desafio_dev_junior/contratos/migrations/: 0001_initial.py
